# ahqos

./: CODE_OF_CONDUCT.md  LICENSE  SECURITY.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/: dependabot.yml
.github/workflows/: publish.yml
src/: App.tsx  main.tsx  master.css  utils.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/src/app/: init_dirs.rs  mod.rs  os.rs  utils.rs
src/Main-Loading/: index.tsx
src/UI/Main-Loading/: index.css
