[package]
name = "ahqos-preview"
version = "0.1.1"
description = "A Tauri App"
authors = ["ahqsoftwares"]
license = "MIT"
repository = "https://github.com/ahqsoftwares/ahqos"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.4", features = [] }

[dependencies]
tauri = { version = "1.4", features = [ "window-show", "notification-all", "process-exit", "notification" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
is_elevated = "0.1.2"
bcrypt = "0.15.0"

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
